Fix title wrapping.
BUG=346195
NOTRY=true

Review URL: https://codereview.chromium.org/177373002

git-svn-id: svn://svn.chromium.org/blink/trunk@167672 bbb929c8-8fbe-4397-9dbb-9b2b20218538

--- a/front_end/panelEnablerView.css
+++ b/front_end/panelEnablerView.css
@@ -111,6 +111,7 @@ body.inactive .panel-enabler-view button:not(.status-bar-item),
 .panel-enabler-view input[type="radio"] {
     height: 17px;
     width: 17px;
+    min-width: 17px;
     border: 1px solid rgb(165, 165, 165);
     background-image: linear-gradient(to bottom, rgb(252, 252, 252), rgb(223, 223, 223));
     border-radius: 8px;
